--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,16 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: holvit
+      
   keydb:
     image: eqalpha/keydb
     restart: always
     ports:
       - "6379:6379"
     
+  mail:
+    image: maildev/maildev
+    restart: always
+    ports:
+      - "1080:1080"
+      - "1025:1025"
